@@ -511,12 +511,17 @@ Server::switchScreen(BaseClientProxy* dst,
 			}
 		}
 
-		
+
 #if defined(__APPLE__)
-		String secureInputApplication = m_active->getSecureInputApp();
-		if (m_active == m_primaryClient && secureInputApplication != "") {
-			dst->secureInputNotification(secureInputApplication);
-		}
+        if (dst != m_primaryClient) {
+            String secureInputApplication = m_primaryClient->getSecureInputApp();
+            if (secureInputApplication != "") {
+                // display notification on the server
+                m_primaryClient->secureInputNotification(secureInputApplication);
+                //display notification on the client
+                dst->secureInputNotification(secureInputApplication);
+            }
+        }
 #endif
 
 		// cut over
